--- a/public/pokemon.html
+++ b/public/pokemon.html
@@ -87,7 +87,7 @@
         var hidden_ability = data.hidden_ability;
         var form = data.form;
 
-        createCard(eng_name, id, types, url, stats, gender, abilities, HA, form);
+        createCard(eng_name, id, types, url, stats, gender, abilities, hidden_ability, form);
         createPokemonInfo(typing_formatted);
         createMoveInfo(moves);
         
