--- a/public/pokemon.html
+++ b/public/pokemon.html
@@ -107,7 +107,7 @@ $.getJSON(`./data/pokemon/${pokemonID}.json`, function(data) {
         "stats": data.base_stats,
         "moves": data.moves,
         "gender": data.gender_rate,
-        "types_nice": data.typing_formatted,
+        "typing_formatted": data.types_nice,
         "abilities": data.abilities,
         "hidden_ability": data.hidden_ability,
         "form": data.form_name
