--- a/public/search.html
+++ b/public/search.html
@@ -38,15 +38,27 @@
 </div>
 
 <script src= "./jquery-3.5.1.js"> </script>
+
+<script src= "./scripts/niceName.js"> </script>
+
 <script
   src="https://code.jquery.com/ui/1.12.0-rc.2/jquery-ui.js"
   integrity="sha256-6HSLgn6Ao3PKc5ci8rwZfb//5QUu3ge2/Sw9KfLuvr8="
   crossorigin="anonymous"></script>
 <script>
+
+
+    document.getElementById("search").addEventListener("keyup", function(event) {
+    if (event.keyCode === 13) {
+        event.preventDefault();
+        document.getElementById("searchbtn").click();
+    }
+    });
+
     $.getJSON(`./data/list.json`, function(data) {
         var searchbtn = document.querySelector("#searchbtn")
         searchbtn.addEventListener("click", (e) => {
-            window.location.href = `pokemon?pokemon=${data[search.value.toLowerCase]}`
+            window.location.href = `pokemon?pokemon=${data[niceName(search.value)]}`
         });
 
         $("#search").autocomplete({
