fixed resizing issues

--- a/public/index.html
+++ b/public/index.html
@@ -31,81 +31,18 @@
 <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>Generation Eight Notice</h2>
-                <h5>Published Febuary 1st, 2021</h5>
-                <p>Some data, relating to abilities and moves of generation eight pokemon, is currently unavailable. Sorry for the inconvenience</p>
-            </div>
-
-            <div class="card">
-                <h2>This Week In Eververse</h2>
-                <h5>Published January 19, 2021</h5>
-                <p>deez nuts lol</p>
-            </div>
-
-            <div class="card">
-                <h2>This Week In Eververse</h2>
-                <h5>Published January 12, 2021</h5>
-                <p>deez nuts lol</p>
-            </div>
-
-            <div class="card">
-                <h2>This Week In Eververse</h2>
-                <h5>Published January 5, 2021</h5>
-                <p>deez nuts lol</p>
-            </div>
-
-            <div class="card">
-                <h2>This Week In Eververse</h2>
-                <h5>Published December 29, 2020</h5>
-                <p>deez nuts lol</p>
+                <h2>Generation Eight Notice<span class="date-published">Published Febuary 1st, 2021</span></h2>
+                <hr>
+                <p>Some data, relating to abilities and moves of generation eight pokemon, is currently unavailable. Sorry for the inconvenience.</p>
             </div>
         </div>
 
         <div class="rightcolumn">
             <div class="card">
-                <h2>Test side header</h2>
-                <p>Test side para</p>
+                <h2>Search For Pokemon</h2>
+                <button>Take Me There!</button>
             </div>
         </div>
-
-        <div class="rightcolumn">
-            <div class="card">
-                <h2>Sign Up For Our Newsletter!</h2>
-                <div class="row">
-                    <div class="col-25">
-                        <label for="fname">Username</label>
-                    </div>
-
-                    <div class="col-75">
-                        <input type="text" id="fname" name="fname" value="Guardian">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-25">
-                        <label for="lname">Light Level</label>
-                    </div>
-
-                    <div class="col-75">
-                        <input type="text" id="lname" name="lname" value="999">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-25">
-                        <label for="platform">Platform?</label>
-                    </div>
-
-                    <div class="col-75">
-                        <select id="platform" name="platform">
-                            <option value="xb">Xbox</option>
-                            <option value="ps">Playstation</option>
-                            <option value="pc">PC</option>
-                            <option value="stadia">Stadia omegalul</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
       </div>
 </div>
 
