--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,27 @@
                 <hr>
                 <p>Some data, relating to abilities and moves of generation eight pokemon, is currently unavailable. Sorry for the inconvenience.</p>
             </div>
+            <div class="card">
+                <h2>Generation Eight Notice<span class="date-published">Published Febuary 1st, 2021</span></h2>
+                <hr>
+                <p>Some data, relating to abilities and moves of generation eight pokemon, is currently unavailable. Sorry for the inconvenience.</p>
+            </div>
         </div>
 
         <div class="rightcolumn">
             <div class="card">
-                <h2>Search For Pokemon</h2>
-                <button>Take Me There!</button>
+                <h2>Links</h2>
+                <a href="https://github.com/TheTimebike/BattleAid" class="highlight expand typeCard battle-blue">
+                    <h5>Source Code</h5>
+                </a>
+
+                <a href="https://github.com/TheTimebike/BattleAid/issues/new" class="highlight expand typeCard battle-blue">
+                    <h5>File An Issue</h5>
+                </a>
+
+                <a href="https://github.com/TheTimebike/BattleAid" class="highlight expand typeCard battle-blue">
+                    <h5>Source Code</h5>
+                </a>
             </div>
         </div>
       </div>
