--- a/public/abilities.html
+++ b/public/abilities.html
@@ -30,7 +30,8 @@
     <a id="gen7" href="generation.html?generation=7"> Generation Seven </a>
     <a id="gen8" href="generation.html?generation=8"> Generation Eight </a>
     <a href="search.html" style="float:right"> Search For A Pokemon </a>
-    <a class="active" href="types.html" style="float:right"> Types </a>
+    <a href="types.html" style="float:right"> Types </a>
+    <a href="bookmarks.html" style="float:right"> Bookmarks </a>
 </div>
 
 <div style="padding-top:5px">
