--- a/public/bookmarks.html
+++ b/public/bookmarks.html
@@ -31,6 +31,7 @@
     <a id="gen8" href="generation.html?generation=8"> Generation Eight </a>
     <a href="search.html" style="float:right"> Search For A Pokemon </a>
     <a href="types.html" style="float:right"> Types </a>
+    <a class="active" href="bookmarks.html" style="float:right"> Bookmarks </a>
 </div>
 
 <div id="insertCards" class="row">
