--- a/public/types.html
+++ b/public/types.html
@@ -31,6 +31,7 @@
     <a id="gen8" href="generation.html?generation=8"> Generation Eight </a>
     <a href="search.html" style="float:right"> Search For A Pokemon </a>
     <a class="active" href="types.html" style="float:right"> Types </a>
+    <a href="bookmarks.html" style="float:right"> Bookmarks </a>
 </div>
 
 <div class="row">
