--- a/public/search.html
+++ b/public/search.html
@@ -24,7 +24,9 @@
     <a id="gen6" href="generation.html?generation=6"> Generation Six </a>
     <a id="gen7" href="generation.html?generation=7"> Generation Seven </a>
     <a id="gen8" href="generation.html?generation=8"> Generation Eight </a>
-    <a class="active" href="search.html" style="float:right"> Search For A Pokemon </a>
+    <a href="search.html" style="float:right"> Search For A Pokemon </a>
+    <a href="types.html" style="float:right"> Types </a>
+    <a href="bookmarks.html" style="float:right"> Bookmarks </a>
 </div>
 
 <div class="row">
