--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
 <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>Generation Eight Notice<span class="date-published">Published Febuary 1st, 2021</span></h2>
+                <h2>Bookmarking<span class="date-published">Published Febuary 28th, 2021</span></h2>
                 <hr>
-                <p>Some data, relating to abilities and moves of generation eight pokemon, is currently unavailable. Sorry for the inconvenience.</p>
+                <p>You are now able to bookmark specific pokemon and their forms. To bookmark a pokemon, click the bookmark button next to their pokedex number. To view bookmarked pokemon, navigate to the "bookmark" tab located on the navigation bar.</p>
             </div>
             <div class="card">
                 <h2>Generation Eight Notice<span class="date-published">Published Febuary 1st, 2021</span></h2>
