--- a/public/search.html
+++ b/public/search.html
@@ -33,8 +33,10 @@
     <div class="leftcolumn wide">
         <div class="card">
             <h2>Search</h2>
-            <input id="search" type="text" placeholder="Bulbasaur" name="search" autocomplete="off" required autofocus>
-            <button id="searchbtn">Search</button>
+            <div class="search-container">
+                <input id="search" type="text" placeholder="Bulbasaur" name="search" autocomplete="off" required autofocus>
+                <button id="searchbtn">Search</button>
+            </div>
         </div>
     </div>
 </div>
